Feat: ensure intl works by start implenting it in navbar

--- a/apps/web/src/i18n/en.json
+++ b/apps/web/src/i18n/en.json
@@ -2,7 +2,8 @@
   "common": {
     "loading": "Loading...",
     "error": "An error occurred",
-    "retry": "Retry"
+    "retry": "Retry",
+    "settings": "Settings"
   },
   "auth": {
     "login": "Login",
