--- a/apps/web/src/i18n/fr.json
+++ b/apps/web/src/i18n/fr.json
@@ -2,7 +2,8 @@
   "common": {
     "loading": "Chargement...",
     "error": "Une erreur est survenue",
-    "retry": "Réessayer"
+    "retry": "Réessayer",
+    "settings": "Paramètres"
   },
   "auth": {
     "login": "Connexion",
