Refactor: switch to custom useTranslation hook for better i18n support

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -3,7 +3,8 @@
     "loading": "Loading...",
     "error": "An error occurred",
     "retry": "Retry",
-    "settings": "Settings"
+    "settings": "Settings",
+    "welcome": "Welcome, {name}!"
   },
   "auth": {
     "login": "Login",
