--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -8,15 +8,25 @@
   },
   "auth": {
     "login": "Connexion",
-    "register": "Inscription",
+    "register": "S'inscrire",
     "logout": "Déconnexion",
     "email": "Email",
     "password": "Mot de passe",
+    "confirmPassword": "Confirmer le mot de passe",
+    "name": "Nom",
     "forgotPassword": "Mot de passe oublié ?",
-    "noAccount": "Pas encore de compte ?",
+    "noAccount": "Vous n'avez pas de compte ?",
     "hasAccount": "Vous avez déjà un compte ?",
     "switchToRegister": "S'inscrire",
-    "switchToLogin": "Se connecter"
+    "switchToLogin": "Se connecter",
+    "loginTitle": "Connexion",
+    "loginDescription": "Entrez vos identifiants pour vous connecter",
+    "registerTitle": "Inscription",
+    "registerDescription": "Créez un nouveau compte",
+    "emailPlaceholder": "jean@exemple.com",
+    "passwordPlaceholder": "••••••••",
+    "confirmPasswordPlaceholder": "••••••••",
+    "namePlaceholder": "Jean Dupont"
   },
   "validation": {
     "required": "Ce champ est obligatoire",
