--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -14,11 +14,11 @@
     "password": "Password",
     "confirmPassword": "Confirm Password",
     "name": "Name",
-    "forgotPassword": "Forgot your password?",
+
     "noAccount": "Don't have an account?",
     "hasAccount": "Already have an account?",
-    "switchToRegister": "Register",
-    "switchToLogin": "Login",
+    "switchToRegister": "Create an account",
+    "switchToLogin": "Log in to your account",
     "loginTitle": "Login",
     "loginDescription": "Enter your credentials to login",
     "registerTitle": "Register",
@@ -34,6 +34,42 @@
       "instructions": "Please check your inbox and click the link to confirm your email address. If you don't see the email, check your spam folder.",
       "backToLogin": "Back to login",
       "afterConfirmation": "Once you've confirmed your email, you can log in to your account."
+    },
+    "confirmEmail": {
+      "confirming": "Confirming your email...",
+      "success": {
+        "title": "Email Confirmed!",
+        "description": "Your email has been successfully confirmed",
+        "goToLogin": "Go to Login",
+        "canLogin": "You can now log in to your account"
+      }
+    },
+    "forgotPassword": {
+      "title": "Forgot Password",
+      "description": "Enter your email address and we'll send you a link to reset your password",
+      "emailPlaceholder": "Enter your email",
+      "sendLink": "Send Reset Link",
+      "sending": "Sending...",
+      "backToLogin": "Back to Login",
+      "success": {
+        "title": "Check Your Email",
+        "description": "If an account exists with this email, you will receive a password reset link. Please check your email and follow the instructions."
+      },
+      "resetPassword": {
+        "title": "Reset Password",
+        "description": "Enter your new password below",
+        "newPassword": "New Password",
+        "confirmPassword": "Confirm Password",
+        "newPasswordPlaceholder": "Enter your new password",
+        "confirmPasswordPlaceholder": "Confirm your new password",
+        "submit": "Reset Password",
+        "submitting": "Resetting...",
+        "invalidLink": {
+          "title": "Invalid Reset Link",
+          "description": "This password reset link is invalid or has expired. Please request a new password reset link.",
+          "requestNew": "Request New Reset Link"
+        }
+      }
     }
   },
   "validation": {
