--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -33,7 +33,7 @@
       "backToLogin": "Retour à la connexion",
       "success": {
         "title": "Vérifiez votre email",
-        "description": "Si un compte existe avec cet email, vous recevrez un lien de réinitialisation de mot de passe. Veuillez vérifier votre email et suivre les instructions."
+        "description": "Si un compte existe avec cet email, vous recevrez un lien de réinitialisation. Veuillez vérifier votre email et suivre les instructions."
       },
       "resetPassword": {
         "title": "Réinitialiser le mot de passe",
@@ -53,13 +53,13 @@
     },
     "noAccount": "Vous n'avez pas de compte ?",
     "hasAccount": "Vous avez déjà un compte ?",
-    "switchToRegister": "S'inscrire",
-    "switchToLogin": "Se connecter",
+    "switchToRegister": "Créer un compte",
+    "switchToLogin": "Connectez-vous à votre compte",
     "loginTitle": "Connexion",
     "loginDescription": "Entrez vos identifiants pour vous connecter",
     "registerTitle": "Inscription",
     "registerDescription": "Créez un nouveau compte",
-    "emailPlaceholder": "jean@exemple.com",
+    "emailPlaceholder": "john@exemple.com",
     "passwordPlaceholder": "••••••••",
     "confirmPasswordPlaceholder": "••••••••",
     "namePlaceholder": "Jean Dupont",
@@ -72,18 +72,23 @@
       "afterConfirmation": "Une fois que vous aurez confirmé votre email, vous pourrez vous connecter à votre compte."
     },
     "confirmEmail": {
-      "confirming": "Confirmation de votre email en cours...",
+      "confirming": "Confirmation de votre email...",
       "success": {
-        "title": "Email confirmé !",
+        "title": "Email Confirmé !",
         "description": "Votre email a été confirmé avec succès",
-        "goToLogin": "Aller à la connexion",
+        "goToLogin": "Aller à la Connexion",
         "canLogin": "Vous pouvez maintenant vous connecter à votre compte"
       }
     }
   },
   "validation": {
-    "required": "Ce champ est obligatoire",
+    "required": "Ce champ est requis",
     "invalidEmail": "Veuillez entrer une adresse email valide",
-    "passwordTooShort": "Le mot de passe doit contenir au moins 8 caractères"
+    "passwordTooShort": "Le mot de passe doit contenir au moins 8 caractères",
+    "passwordRequiresUppercase": "Le mot de passe doit contenir au moins une lettre majuscule",
+    "passwordRequiresLowercase": "Le mot de passe doit contenir au moins une lettre minuscule",
+    "passwordRequiresNumber": "Le mot de passe doit contenir au moins un chiffre",
+    "passwordRequiresSpecial": "Le mot de passe doit contenir au moins un caractère spécial",
+    "passwordsDontMatch": "Les mots de passe ne correspondent pas"
   }
 }
