--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -82,6 +82,9 @@
       }
     }
   },
+  "profile": {
+    "memberSince": "Member Since"
+  },
   "validation": {
     "required": "This field is required",
     "invalidEmail": "Please enter a valid email address",
