Enhance: introduce a new bug-fixing illustration and revamp ErrorBoundary component for improved user experience.

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -4,7 +4,10 @@
     "error": "An error occurred",
     "retry": "Retry",
     "settings": "Settings",
-    "welcome": "Welcome, {name}!"
+    "welcome": "Welcome, {name}!",
+    "somethingWentWrong": "Something went wrong",
+    "unexpectedError": "An unexpected error occurred",
+    "tryAgain": "Try Again"
   },
   "languages": {
     "en": "English",
