--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -98,5 +98,30 @@
     "passwordsDontMatch": "Les mots de passe ne correspondent pas",
     "nameTooShort": "Le nom doit contenir au moins 2 caractères",
     "passwordRequirements": "Le mot de passe doit contenir au moins une lettre majuscule, une lettre minuscule, un chiffre et un caractère spécial"
+  },
+  "settings": {
+    "title": "Paramètres",
+    "description": "Gérez votre compte et vos préférences d'application",
+    "user": {
+      "title": "Paramètres utilisateur",
+      "description": "Gérez vos informations de compte et vos préférences",
+      "displayName": "Nom d'affichage",
+      "email": "Email"
+    },
+    "app": {
+      "title": "Paramètres de l'application",
+      "description": "Personnalisez votre expérience d'application",
+      "language": {
+        "title": "Langue",
+        "description": "Choisissez votre langue préférée"
+      },
+      "theme": {
+        "title": "Thème",
+        "description": "Choisissez votre thème préféré",
+        "light": "Clair",
+        "dark": "Sombre",
+        "changed": "Thème changé pour {theme}"
+      }
+    }
   }
 }
