Refactor: replace user details in SettingsPage with UserProfile component for cleaner code and enhanced user experience. Also, add save button localization in English and French.

--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -7,7 +7,8 @@
     "welcome": "Bienvenue, {name} !",
     "somethingWentWrong": "Une erreur est survenue",
     "unexpectedError": "Une erreur inattendue est survenue",
-    "tryAgain": "Réessayer"
+    "tryAgain": "Réessayer",
+    "save": "Enregistrer"
   },
   "languages": {
     "en": "Anglais",
