--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -7,7 +7,8 @@
     "welcome": "Welcome, {name}!",
     "somethingWentWrong": "Something went wrong",
     "unexpectedError": "An unexpected error occurred",
-    "tryAgain": "Try Again"
+    "tryAgain": "Try Again",
+    "save": "Save"
   },
   "languages": {
     "en": "English",
