Refactor: overhaul Navbar structure by modularizing components into AppLogo, DesktopLinks, MobileLinks, and FeatureLink

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -125,5 +125,42 @@
         "changed": "Theme changed to {theme}"
       }
     }
+  },
+  "navbar": {
+    "features": {
+      "title": "Features",
+      "items": {
+        "dashboard": {
+          "title": "Dashboard",
+          "description": "Overview of your activity"
+        },
+        "analytics": {
+          "title": "Analytics",
+          "description": "Track your performance"
+        },
+        "settings": {
+          "title": "Settings",
+          "description": "Configure your preferences"
+        },
+        "integrations": {
+          "title": "Integrations",
+          "description": "Connect with other tools"
+        },
+        "storage": {
+          "title": "Storage",
+          "description": "Manage your files"
+        },
+        "support": {
+          "title": "Support",
+          "description": "Get help when needed"
+        }
+      }
+    },
+    "links": {
+      "about": "About",
+      "tasks": "Tasks",
+      "settings": "Settings",
+      "contact": "Contact"
+    }
   }
 }
