Feat/confirmation token expiration fe part (#27)
* feat(auth): implement email confirmation resend flow

- Add resend confirmation API endpoint and mutation

- Create ResendConfirmationEmailDialog component

- Update error handling for expired tokens

- Add conditional messaging for resend vs initial registration

- Update translations for both languages

- Improve error handling with centralized error types

* refactor(auth): streamline ThrottlerModule configuration and enhance email confirmation dialog

* fix(auth): enhance email confirmation error handling and update test messages

* fix(api): improve token refresh logic and error handling

* refactor(api): extract isApiError function to errors module for cleaner code and improved error handling

* fix(auth): improve error message handling in AuthPage for better user feedback

* feat(api): integrate ScheduleModule for task scheduling capabilities

* chore(auth): remove ThrottlerModule from AuthModule to streamline dependencies

* feat(api): implement Joi validation schema for environment variables in AppModule

- Remove redundant ConfigModule from AuthModule and EmailModule to streamline imports.
- Delete obsolete ConfigModule file to clean up the codebase.

* fix(auth): remove console logging on error handling for cleaner code

- Eliminated console.log in the error handling of email confirmation to enhance code cleanliness and maintainability.

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -43,11 +43,13 @@
     "namePlaceholder": "John Doe",
     "checkEmail": {
       "title": "Check your email",
-      "description": "We've sent a confirmation link to ",
-      "descriptionNoEmail": "We've sent you a confirmation link to verify your email address.",
-      "instructions": "Please check your inbox and click the link to confirm your email address. If you don't see the email, check your spam folder.",
+      "description": "We have sent a confirmation link to ",
+      "descriptionResend": "If your email is registered, you will receive a new confirmation link at ",
+      "descriptionNoEmail": "Please check your email for a confirmation link",
+      "instructions": "Click the link in the email to confirm your account",
       "backToLogin": "Back to Login",
-      "afterConfirmation": "Once you've confirmed your email, you'll be able to log in to your account."
+      "afterConfirmation": "After confirming your email, you can log in to your account",
+      "resendTitle": "Resend confirmation email"
     },
     "confirmEmail": {
       "confirming": "Confirming your email...",
@@ -56,6 +58,19 @@
         "description": "Your email has been successfully confirmed",
         "goToLogin": "Go to Login",
         "canLogin": "You can now log in to your account"
+      },
+      "error": {
+        "title": "Confirmation Failed",
+        "description": "We were unable to confirm your email",
+        "message": "The confirmation link may have expired or is invalid",
+        "tryAgain": "Try Registering Again",
+        "hint": "You can create a new account with your email",
+        "resendConfirmation": "Request New Confirmation Link",
+        "resendHint": "We can send you a new confirmation link to verify your email"
+      },
+      "resend": {
+        "title": "Resend confirmation email",
+        "submit": "Send new confirmation link"
       }
     },
     "forgotPassword": {
